[gd_scene load_steps=3 format=3 uid="uid://k6yhmw8h183y"]

[ext_resource type="Script" uid="uid://s8rup5a7kjcp" path="res://scripts/menu.gd" id="1_yqeox"]
[ext_resource type="Texture2D" uid="uid://coo0ass450pdn" path="res://assets/Background/Background - Layered.png" id="2_vjb58"]

[node name="Menu" type="Node2D"]
script = ExtResource("1_yqeox")

[node name="Button3" type="Button" parent="."]
offset_left = -296.0
offset_top = -512.0
offset_right = 296.0
offset_bottom = -272.0
text = "Continue"

[node name="Button" type="Button" parent="."]
offset_left = -296.0
offset_top = -248.0
offset_right = 296.0
offset_bottom = 16.0
text = "New Game"

[node name="Button1" type="Button" parent="."]
offset_left = -296.0
offset_top = 40.0
offset_right = 296.0
offset_bottom = 288.0
text = "Options"

[node name="Button2" type="Button" parent="."]
offset_left = -296.0
offset_top = 312.0
offset_right = 296.0
offset_bottom = 560.0
text = "Quit"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -64)

[node name="Label" type="Label" parent="."]
offset_left = -296.0
offset_top = -664.0
offset_right = 296.0
offset_bottom = -521.0
theme_override_font_sizes/font_size = 60
text = "Placeholder 2"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(60, -8.00001)
scale = Vector2(11.0937, 11.75)
texture = ExtResource("2_vjb58")

[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button1" to="." method="_on_button_1_pressed"]
[connection signal="pressed" from="Button2" to="." method="_on_button_2_pressed"]
